fix: center intro overlay on mobile

--- a/style.css
+++ b/style.css
@@ -221,14 +221,20 @@ header {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgb(135, 135, 135);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     z-index: 100;
+}
+
+@supports (height: 100dvh) {
+    #intro-overlay {
+        height: 100dvh;
+    }
 }
 
 #intro-overlay p {
